--- a/src/main/resources/application-rldev.yaml
+++ b/src/main/resources/application-rldev.yaml
@@ -3,11 +3,23 @@ logging:
   level:
     org.redisson: info
 
+# Add this to switch to using caffeine as a cache provider for bucket4j, or if
+# you want to switch to testing using the postgresql proxy manager
+#spring:
+#  autoconfigure:
+#    exclude:
+#      - org.redisson.spring.starter.RedissonAutoConfigurationV2
+#  cache:
+#    jcache:
+#      provider: com.github.benmanes.caffeine.jcache.spi.CaffeineCachingProvider
+
 fact:
   data-api:
     rate-limit:
-
       # configuration for bucket4j solution:
+
+      # set this to true to use postgres as the bucket store
+      use-postgres: false
 
       # default-bucket is used when no explicit bucket is specified
       # the values below are the defaults for reference. This config
