--- a/src/integrationTest/resources/application-test.yaml
+++ b/src/integrationTest/resources/application-test.yaml
@@ -2,6 +2,11 @@ spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:tc:postgresql:16:///fact
+  # prevents azure trying to autoconfigure during integration tests
+  autoconfigure:
+    exclude:
+      - com.azure.spring.cloud.autoconfigure.implementation.context.AzureTokenCredentialAutoConfiguration
+
 os:
   url: https://api.os.uk
   key: a-key
