--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -65,6 +65,12 @@ spring:
         blob:
           container-name: photos
           connection-string: ${AZURE_STORAGE_CONNECTION_STRING:}
+      # required for security flows
+      active-directory:
+        enabled: true
+        profile:
+          tenant-id: ${AZURE_TENANT_ID}
+        app-id-uri: ${AZURE_APP_ID}
   servlet:
     multipart:
       max-file-size: 2MB
