--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,8 @@ management:
   endpoint:
     health:
       show-details: "always"
+      probes:
+        enabled: true
       group:
         readiness:
           include: "db"
