Added app-reg-id to values yaml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -72,7 +72,7 @@ spring:
         enabled: true
         profile:
           tenant-id: ${AZURE_TENANT_ID}
-        app-id-uri: ${AZURE_APP_ID}
+        app-id-uri: ${APP_REG_ID}
   servlet:
     multipart:
       max-file-size: 2MB
