--- a/charts/fact-data-api/values.yaml
+++ b/charts/fact-data-api/values.yaml
@@ -20,6 +20,8 @@ java:
           alias: DB_HOST
         - name: os-key
           alias: OS_KEY
+        - name: app-reg-id
+          alias: APP_REG_ID
   environment:
     RUN_DB_MIGRATION_ON_STARTUP: false
     AZURE_MANAGED_IDENTITY_ENABLED: true
