--- a/build.gradle
+++ b/build.gradle
@@ -167,6 +167,7 @@ ext {
 }
 
 ext['snakeyaml.version'] = '2.0'
+ext['log4j2.version'] = '2.25.3' // CVE-2025-68161
 
 dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
