--- a/build.gradle
+++ b/build.gradle
@@ -187,6 +187,8 @@ dependencies {
 
   implementation group: 'io.hypersistence', name: 'hypersistence-utils-hibernate-63', version: '3.15.1'
 
+  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-hibernate6', version: '2.20.1'
+
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
 
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
