--- a/charts/fact-data-api/values.aat.template.yaml
+++ b/charts/fact-data-api/values.aat.template.yaml
@@ -19,3 +19,5 @@ java:
           enable_distance_extensions.sql: |
             CREATE EXTENSION IF NOT EXISTS cube WITH SCHEMA public;
             CREATE EXTENSION IF NOT EXISTS earthdistance WITH SCHEMA public;
+        user: "{{ .Values.postgresql.auth.username}}"
+        password: "{{ .Values.postgresql.auth.password}}"
